@@ -23,8 +23,12 @@
                     there are times you may want to create your own custom refactoring class.</p>
                     <p>
                         To create your own custom refactoring, simply create a class that implements
-                        the <a href="api/liquibase/change/CustomChange.html">liquibase.change.CustomChange</a> interface
+                        the <a href="api/liquibase/change/custom/CustomChange.html">liquibase.change.custom.CustomChange</a> interface
                         and use the &lt;custom&gt; tag in your change set.
+                    </p>
+                    <p>
+                        If your change can be rolled back, implement the <a href="api/liquibase/change/custom/CustomChangeRollback.html">liquibase.change.custom.CustomChangeRollback</a> interface
+                        as well.
                     </p>
                     <p>
                         For a sample custom change class, see <a href="http://liquibase.svn.sourceforge.net/viewvc/liquibase/trunk/core/src/java-test/liquibase/change/ExampleCustomChange.java?view=markup">liquibase.change.ExampleCustomChange</a>
